# raspivid-translate

./: CMakeLists.txt  README.md
containers/: CMakeLists.txt
host_applications/linux/: CMakeLists.txt
host_applications/linux/apps/raspicam/: CMakeLists.txt  Makefile
host_applications/linux/apps/spi_test/: CMakeLists.txt  spi_test.c
host_applications/linux/apps/spi_test/wiringPi/: wiringPi.c
host_applications/linux/libs/bcm_host/: CMakeLists.txt
interface/mmal/: CMakeLists.txt
interface/mmal/vc/: CMakeLists.txt
interface/vchiq_arm/: CMakeLists.txt
interface/vmcs_host/linux/vcfiled/: CMakeLists.txt
makefiles/cmake/: vmcs.cmake
